@@ -11,6 +11,8 @@ PyObjC NEWS</title>
 <p>An overview of the relevant changes in new, and older, releases.</p>
 <h2><a name="version-1-3-5-2005-05">Version 1.3.5 (2005-05-??)</a></h2>
 <ul>
+<li>New <code><span>objc.RegisterCFSignature</span></code> used to register <code><span>CFTypeRef</span></code>-like
+signatures with the runtime.</li>
 <li><code><span>PyObjCTools.Conversion</span></code> functions now support all property list
 types with the following conversions:<ul>
 <li>NSData &lt;-&gt; buffer</li>
